grid alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   justify-content: space-between;
   border: 1px solid rgb(3, 118, 211);
-  width: 281px;
+  width: 75%;
   border-radius: 5px;
   margin: auto;
   margin-top: 50px;
@@ -27,6 +27,7 @@ body {
   border-radius: 25px;
   margin-left: 20px;
 }
+
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
